--- a/style.css
+++ b/style.css
@@ -1,1 +1,96 @@
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Oswald:wght@200;300;400;500&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css");
+* {
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.img-wrapper {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+    animation: zoom 25s
+}
+
+@keyframes zoom {
+    0% {
+        transform: scale(1.3);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.banner {
+    position: absolute;
+    left: 7%;
+    top: 25%;
+}
+
+.banner h1 {
+    color: white;
+    font-size: 7rem;
+    font-family: "Oswald", serif;
+    font-weight: 200;
+    text-shadow: .1rem .2rem 2px rgba(0, 0, 0, .4);
+    margin-bottom: 1rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.3s forwards;
+}
+
+.banner p {
+    font-family: "Roboto", serif;
+    font-size: 2.5rem;
+    color: white;
+    text-shadow: .1rem .1rem 2px rgba(0, 0, 0, .6);
+    margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.5s forwards;
+}
+
+.banner button {
+    font-family: "Oswald", serif;
+    font-size: 1.6rem;
+    color: white;
+    text-transform: uppercase;
+    background: #FDC830;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #F37335, #FDC830);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #F37335, #FDC830);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    padding: 1rem 2.3rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    opacity: 0;
+    animation: moveBanner 1s 0.7s forwards;
+}
+
+.banner button:hover {
+    opacity: 0.9;
+}
+
+@keyframes moveBanner {
+    0% {
+        transform: translateY(10rem) rotateY(-30deg);
+    }
+    100% {
+        transform: translateY(0) rotateY(0);
+        opacity: 1;
+    }
+}
