--- a/style.css
+++ b/style.css
@@ -3,6 +3,83 @@
 * {
     margin: 0;
     padding: 0;
+    list-style: none;
+    text-decoration: none;
+}
+
+:root {
+    --font-primary: "Oswald", serif;
+    --font-secundary: "Roboto", serif;
+}
+
+.hamburguer {
+    width: 3rem;
+    height: 3rem;
+    position: fixed;
+    z-index: 100;
+    right: 4rem;
+    top: 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+}
+
+.show-menu .hamburguer {
+    right: 18rem;
+    transition: all 1s;
+}
+
+.line {
+    width: 100;
+    height: .1rem;
+    background-color: white;
+    box-shadow: 0.1rem 0.1rem 1px black;
+    transition: transform 1s;
+}
+
+.show-menu #line2 {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.show-menu #line1 {
+    transform: rotate(45deg) translate(.3rem, .45rem);
+}
+
+.show-menu #line3 {
+    transform: rotate(-45deg) translate(.45rem, -.75rem);
+}
+
+.hamburguer span {
+    position: absolute;
+    left: 3rem;
+    height: 2.75rem;
+    width: 7rem;
+    background-color: #F37335;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-family: var(--font-secundary);
+    font-size: 1.4rem;
+    color: gray;
+    opacity: 0;
+    border-radius: 6px;
+}
+
+.hamburguer span::before {
+    content: "";
+    position: absolute;
+    border-right: .5rem solid #F37335;
+    border-left: .5rem solid transparent;
+    border-top: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    left: -1rem;
+}
+
+.show-menu .hamburguer:hover span {
+    opacity: 1;
 }
 
 header {
@@ -43,8 +120,8 @@ header {
 
 .banner h1 {
     color: white;
-    font-size: 7rem;
-    font-family: "Oswald", serif;
+    font-size: calc(3rem + 4vw);
+    font-family: var(--font-primary);
     font-weight: 200;
     text-shadow: .1rem .2rem 2px rgba(0, 0, 0, .4);
     margin-bottom: 1rem;
@@ -53,8 +130,8 @@ header {
 }
 
 .banner p {
-    font-family: "Roboto", serif;
-    font-size: 2.5rem;
+    font-family: var(--font-secundary);
+    font-size: calc(1rem + 2vw);
     color: white;
     text-shadow: .1rem .1rem 2px rgba(0, 0, 0, .6);
     margin-bottom: 2rem;
@@ -63,7 +140,7 @@ header {
 }
 
 .banner button {
-    font-family: "Oswald", serif;
+    font-family: var(--font-primary);
     font-size: 1.6rem;
     color: white;
     text-transform: uppercase;
@@ -75,14 +152,10 @@ header {
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     padding: 1rem 2.3rem;
     border: none;
-    border-radius: 5px;
+    border-radius: 7px;
     cursor: pointer;
     opacity: 0;
     animation: moveBanner 1s 0.7s forwards;
-}
-
-.banner button:hover {
-    opacity: 0.9;
 }
 
 @keyframes moveBanner {
@@ -93,4 +166,65 @@ header {
         transform: translateY(0) rotateY(0);
         opacity: 1;
     }
+}
+
+.sidebar {
+    width: 23rem;
+    height: 100vh;
+    background-color: white;
+    position: fixed;
+    top: 0;
+    right: -30rem;
+    transition: all .75s;
+}
+
+.show-menu .sidebar {
+    right: 0;
+}
+
+.menu {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.menu-item {
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+.menu-link {
+    font-family: var(--font-secundary);
+    font-size: 2.5rem;
+    color: gray;
+    transition: color .5s;
+}
+
+.menu-link:hover {
+    color: #F37335;
+}
+
+.social-media {
+    position: absolute;
+    bottom: 8rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.social-media i {
+    color: gray;
+    width: 3rem;
+    height: 3rem;
+    font-size: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 6px;
+    transition: background-color .5s;
+}
+
+.social-media i:hover {
+    background-color: #F37335;
 }
